--- a/src/client/src/components/dashboard.html
+++ b/src/client/src/components/dashboard.html
@@ -154,7 +154,7 @@
         </div>
     </div>      
     <script src="/index.js"></script>
-    <script defer src="../dashBoard.js"></script>
+    <script type="text/javascript" defer src="./dashBoard.js"></script>
 </body>
 
 </html>
