--- a/src/client/src/components/hamlog.html
+++ b/src/client/src/components/hamlog.html
@@ -352,7 +352,7 @@
 		</table>
 	</div>
 	<script type="text/javascript" src="index.js"></script>
-	<script type="text/javascript" defer src="/src/client/src/components/swlLog.js"></script>
+	<script type="text/javascript" defer src="./src/client/src/components/hamLog.js"></script>
 </body>
 
 </html>
